--- a/camp.html
+++ b/camp.html
@@ -13,8 +13,8 @@
 			<div>
 
 			<div class="menu">
-				<a href="index.html">Biografia</a> | 
-				<a href="">Campanhas Publicitárias</a> | 
+				<a href="index.html">Biografia</a>  
+				<a href="">Campanhas Publicitárias</a>  
 				<a href="">Contato</a>
 			</div>
 
