--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			</div>
 
 			<div class="menu"><!-- Menu -->
-				<a href="index.html">Biografia</a> | 
-				<a href="camp.html">Campanhas Publicitárias</a> | 
+				<a href="index.html">Biografia</a> 
+				<a href="camp.html">Campanhas Publicitárias</a>  
 				<a href="">Contato</a>
 			</div>
 			<div><h1 class="titulo">Biografia</h1> <!-- Conteúdo -->
